--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 aiohttp==3.7.4.post0
+anyio==3.2.1
 async-timeout==3.0.1
 attrs==21.2.0
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 discord-py-slash-command==1.2.2
 discord.py==1.7.3
-idna==3.2
+h11==0.12.0
+httpcore==0.13.6
+httpx==0.18.2
+idna==2.10
 multidict==5.1.0
 pycparser==2.20
 pymongo==3.11.4
 PyNaCl==1.4.0
 python-dotenv==0.17.1
+rfc3986==1.5.0
+simple-chalk==0.1.0
 six==1.16.0
+sniffio==1.2.0
 typing-extensions==3.10.0.0
+Unidecode==1.2.0
+urllib3==1.26.5
 yarl==1.6.3
+youtube-dl==2021.6.6
